--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Inventory</string>
+    <string name="action_delete_all_entries">Delete All Items</string>
 </resources>
