--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="editor_activity_title_edit_item">Edit item</string>
     <string name="editor_update_item_successful">Item updated successfully</string>
     <string name="editor_update_item_failed">An error occurred: Item could not be updated</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
+    <string name="return_dialog_msg">You have unsaved changes. Are you sure you want to exit?</string>
+    <string name="discard">Discard</string>
+    <string name="edit">Keep editing</string>
 </resources>
