--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="return_dialog_msg">You have unsaved changes. Are you sure you want to exit?</string>
     <string name="discard">Discard</string>
     <string name="edit">Keep editing</string>
+    <string name="sort_dialog_msg">Sort By</string>
 </resources>
