--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
+    <string name="delete_all_dialog_msg">Are you sure you want to delete all items?</string>
     <string name="return_dialog_msg">You have unsaved changes. Are you sure you want to exit?</string>
     <string name="discard">Discard</string>
     <string name="edit">Keep editing</string>
