"made some formatting changes"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="hint_item_tag3">Tag3</string>
     <string name="category_tag">Tags</string>
     <string name="cardview_price_label">Price: $</string>
-    <string name="cardview_quantity_label">Quantity:</string>
+    <string name="cardview_quantity_label">In stock:&#160;</string>
     <string name="editor_insert_item_successful">Item saved successfully</string>
     <string name="editor_insert_item_failed">An error occurred: Item could not be saved</string>
     <string name="action_delete_current_entry">Delete item</string>
